infinity scroll complete

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
 /images
 /images2
-
-# '../images/cxx.jpg',
-#     '../images/jumi.jpg',
-#     '../images/cxx2.png',
-#     '../images/jenny.jpg',
-#     '../images/dc.jpg',
-#     '../images/jumi2.jpg',
+note
